- fixed display for algolia logo - home masthead overflow

--- a/assets/scss/_masthead.scss
+++ b/assets/scss/_masthead.scss
@@ -50,7 +50,7 @@
 
   &.bd-masthead-home {
     position: relative;
-    overflow: hidden;
+    //overflow: hidden;
     h2 {
       font-size: 40px;
       text-shadow: 0 1px 2px rgba($bd-dark, .35);
@@ -124,6 +124,7 @@
 }
 
 .masthead-followup {
+  position: relative;
   background: $bd-doc-content-bg;
 
   .followup-card-item {
